# java-lnp-wallet

./: .gitignore  Makefile  README.md  dependency-reduced-pom.xml  docker-compose.yml  pom.xml
.github/workflows/: build-test-release.yml
bitcoin-lightning-dev/: .env  bitcoin-cli-helper.sh  check-balance.sh  docker-compose.yml  mint-and-lightning-tx.sh  nginx.conf  rest-api-helper.sh  run-app.sh  seed.txt  setup-rtl.sh  setup.sh  simple-btc-to-lightning.sh  test-lightning-node.sh  transaction_log_20250525_133935.json
bitcoin-lightning-dev/data/bitcoin/: bitcoin.conf
bitcoin-lightning-dev/data/lightning/: admin.macaroon  invoice.macaroon  lightning.conf  readonly.macaroon  tls.cert  tls.key
bitcoin-lightning-dev/data/rtl/: RTL-Config.json
bitcoin-lightning-dev/rust-bitcoin-client/: Cargo.toml  Dockerfile  Dockerfile.prod  README.md
bitcoin-lightning-dev/rust-bitcoin-client/.cargo/: config.toml
bitcoin-lightning-dev/rust-bitcoin-client/src/: main.rs
bitcoin-lightning-dev/test_results/: blockchain_info.json  lightning_balance.json  lightning_channels.json  lightning_info.json  lightning_peers.json  lightning_pending_channels.json  test_log_20250427_235354.txt  test_log_20250430_003830.txt  test_log_20250430_012628.txt  test_log_20250525_114217.txt
docker/: docker-compose.yml  lnd-entrypoint.sh
lightning-network-app/: .env  Makefile  README.md  dependency-reduced-pom.xml  pom.xml  run.sh
lightning-network-app/data/bitcoin/: bitcoin.conf
lightning-network-app/data/lightning/: lightning.conf
src/main/resources/: logback.xml
(+96 files in other folders)
