[package]
name = "bitcoin-lightning-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
bitcoin = "0.30.0"
lightning = "0.0.118"
bitcoincore-rpc = "0.17.0"
tonic = "0.9.2"
prost = "0.11.9"
tokio = { version = "1.28.0", features = ["full"] }
anyhow = "1.0.71"
dotenv = "0.15.0"
clap = { version = "4.2.7", features = ["derive"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
reqwest = { version = "0.11.18", features = ["json"] }
log = "0.4.17"
env_logger = "0.10.0"
rand = "0.8.5"
hex = "0.4.3"
